--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,8 +1,8 @@
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.driver_class=com.mysql.jdbc.Driver
 hibernate.connection.url=jdbc:mysql://localhost:3306/movie
-hibernate.connection.username=app
-hibernate.connection.password=pass
+hibernate.connection.username=root
+hibernate.connection.password=root
 hibernate.jdbc.time_zone=UTC
 hibernate.show_sql=true
 hibernate.format_sql=true
